fixed the line height of modal title on mobile

--- a/style.css
+++ b/style.css
@@ -211,20 +211,18 @@ body {
     margin: 0;
     color: black;
     -webkit-text-stroke: 1px var(--second-color);
-    background:
-      linear-gradient(
-        to right,
-        #f55800,
-        rgba(241, 89, 3, 0.84) 50%,
-        transparent 10%
-      );
+    background: linear-gradient(
+      to right,
+      #f55800,
+      rgba(241, 89, 3, 0.84) 50%,
+      transparent 10%
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 200% 100%;
     background-position: 100%;
-    animation:
-      backgroundColor 4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse
+    animation: backgroundColor 4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse
       forwards 1s;
   }
 
@@ -417,20 +415,18 @@ body {
     margin: 0;
     color: black;
     -webkit-text-stroke: 1px var(--second-color);
-    background:
-      linear-gradient(
-        to right,
-        #f55800,
-        rgba(241, 89, 3, 0.84) 50%,
-        transparent 10%
-      );
+    background: linear-gradient(
+      to right,
+      #f55800,
+      rgba(241, 89, 3, 0.84) 50%,
+      transparent 10%
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 200% 100%;
     background-position: 100%;
-    animation:
-      backgroundColor 4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse
+    animation: backgroundColor 4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse
       forwards 1s;
   }
 
@@ -676,7 +672,7 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
-    line-height: 5px;
+    line-height: 1.2;
     color: #172b4d;
   }
 
@@ -866,20 +862,18 @@ body {
 
     /* making stroke for texts */
     -webkit-text-stroke: 1px var(--second-color);
-    background:
-      linear-gradient(
-        to right,
-        #f55800,
-        rgba(241, 89, 3, 0.84) 50%,
-        transparent 10%
-      );
+    background: linear-gradient(
+      to right,
+      #f55800,
+      rgba(241, 89, 3, 0.84) 50%,
+      transparent 10%
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 200% 100%;
     background-position: 100%;
-    animation:
-      backgroundColor 4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse
+    animation: backgroundColor 4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse
       forwards 1s;
   }
 
@@ -1054,20 +1048,18 @@ body {
     font-size: 72px;
     line-height: 82px;
     -webkit-text-stroke: 1px var(--second-color);
-    background:
-      linear-gradient(
-        to right,
-        #f55800,
-        rgba(241, 89, 3, 0.84) 50%,
-        transparent 10%
-      );
+    background: linear-gradient(
+      to right,
+      #f55800,
+      rgba(241, 89, 3, 0.84) 50%,
+      transparent 10%
+    );
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 200% 100%;
     background-position: 100%;
-    animation:
-      backgroundColor 4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse
+    animation: backgroundColor 4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse
       forwards 1s;
   }
 
